# SatsVerdant

./: LICENSE  README.md  netlify.toml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  ENV_SETUP_GUIDE.md  IMPLEMENTATION_SUMMARY.md  Makefile  QUICK_START.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  setup_backend.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: auth.py  rewards.py  stats.py  submissions.py  validators.py
backend/app/blockchain/: __init__.py
backend/app/core/: config.py  config.py.backup  database.py  ipfs.py  logging_config.py  security.py  storage.py
backend/app/db/: init_db.py
backend/app/ml/: __init__.py  model_loader.py  preprocessing.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py
backend/app/services/: reward_service.py  submission_service.py  validator_service.py
backend/app/workers/: __init__.py  tasks.py
backend/docs/: DEPLOYMENT.md
backend/scripts/: run_dev.sh  setup.sh
backend/supabase/functions/: .env.example  deno.json  import_map.json
backend/supabase/functions/classify/: index.ts
backend/supabase/migrations/: 001_initial_schema.sql
backend/supabase/seed-data/: 001_sample_data.sql
backend/tests/: conftest.py  test_api.py  test_models.py  test_reward_service.py  test_security.py  test_submission_service.py  test_validator_service.py
contracts/: CONTRACT-README.md  Clarinet.toml  DEPLOYMENT_GUIDE.md
contracts/contracts/: rewards-pool.clar  validator-pool.clar  waste-tokens.clar
docs/: SatsVerdant_AI_ML_PRD_MVP.md  SatsVerdant_Backend_PRD_MVP.md  SatsVerdant_Contracts_PRD_MVP.md  SatsVerdant_Data_Strategy.md  SatsVerdant_Frontend_PRD.md  future_improvements_from_old_implementation.md  satsverdant-wireframe.html  skool.md  system_design.md
frontend/: FRONTEND-README.md  next.config.mjs  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/components/: logo.tsx
frontend/hooks/: use-sidebar.tsx  use-wallet.tsx
frontend/public/: _redirects
ml-training/: .env.example  ML-README.md  README.md  dvc.yaml  params.yaml  requirements.txt  run_pipeline.sh
ml-training/metrics/: prepare_metrics.json
ml-training/notebooks/: README.md
ml-training/scripts/: download_datasets.py  generate_synthetic.py  remap_datasets.py  setup_colab.py  test_model.py  train_model.py
(+29 files in other folders)
